优化系统管理